@@ -1,6 +1,7 @@
 Version 5.1. 24 April 2017 - xxx edition
 
 Added menu movement with mouse
+Added Visualmem menu also for Sinclair QL
 Fixed turbo mode and breakpoints. Breakpoints were always disabled when changing turbo mode
 Some other minor bugfixes and improvements
 
